src/objects/Potential_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Potential Contacts</relationshipLabel>
        <relationshipName>Potential_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>In Life Property Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Out of Hours Contact</fullName>
                </value>
                <value>
                    <fullName>Legal Contact</fullName>
                </value>
                <value>
                    <fullName>Project Management Contact</fullName>
                </value>
                <value>
                    <fullName>Director Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>In Life Property Contact</fullName>
                </value>
                <value>
                    <fullName>Out of Hours Contact</fullName>
                </value>
                <value>
                    <fullName>Legal Contact</fullName>
                </value>
                <value>
                    <fullName>Project Management Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Mobile__c</fullName>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ_QuoteDocument__c</fullName>
        <label>Quote Document</label>
        <referenceTo>SBQQ__QuoteDocument__c</referenceTo>
        <relationshipLabel>Potential Contacts</relationshipLabel>
        <relationshipName>Potential_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Potential Contacts</relationshipLabel>
        <relationshipName>Potential_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Potential Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ_QuoteDocument__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Potential Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>